# headwater

./: .gitignore  1  README.md
headwater/: Dockerfile  Makefile  README.md  docker-compose.yml  phase1_mvp.md  press_release.md  progress.md  pyproject.toml  rfp.md  v2_plan.md  v3_plan.md
headwater/headwater/: __init__.py  __main__.py
headwater/headwater/analyzer/: catalog.py  companion.py  eval.py  heuristics.py  llm.py  ollama.py  semantic.py
headwater/headwater/api/: app.py
headwater/headwater/cli/: display.py  main.py
headwater/headwater/connectors/: base.py  csv_loader.py  json_loader.py  postgres_loader.py  registry.py
headwater/headwater/core/: classification.py  config.py  exceptions.py  graph_store.py  metadata.py  models.py  vector_store.py
headwater/headwater/drift/: schema.py
headwater/headwater/executor/: duckdb_backend.py  runner.py
headwater/headwater/explorer/: __init__.py  decomposition.py  nl_to_sql.py  query_planner.py  schema_context.py  schema_graph.py  statistical.py  suggestions.py  (+2 more)
headwater/tests/: conftest.py  test_analyzer.py  test_api.py  test_catalog.py  test_classification.py  test_cli.py  test_companion.py  test_confidence.py  test_connectors.py  test_data_api.py  test_decomposition.py  test_dictionary.py  test_drift.py  test_executor.py  test_explorer.py  test_generator.py  test_graph_store.py  test_metadata.py  test_models.py  test_ollama.py  test_postgres_connector.py  test_profiler.py  test_quality.py  test_rerun.py  test_semantic_deep.py  test_vector_store.py
headwater/ui/: Dockerfile  package-lock.json  package.json
(+72 files in other folders)
